test-sync med TE15 NVM

--- a/projects/dropdown-menu/assets/css/main.css
+++ b/projects/dropdown-menu/assets/css/main.css
@@ -42,7 +42,7 @@ nav {
 
 .dropdown:hover .dropdown-child {
     visibility: visible;
-    opacity: 1;
+    opacity: .99999;
 }
 
 .dropdown-grandchild {
